[package]
name = "crdmon"
version = "0.1.0"
edition = "2021"
authors = [
  "Klaus Wagner <klaus.wagner@erstegroup.com>",
]

[dependencies]
kube = { version = "0.76.0", default-features = true, features = ["derive", "runtime", "rustls-tls"] } # Library for talking to Kubernetes API
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
k8s-openapi = { version = "0.16", default-features = false, features = ["v1_25"] } # Kube-rs depends on k8s-openapi
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
anyhow = "1.0.44"
futures = "0.3.17"
once_cell = "*"
tokio-cron-scheduler = "*"
prometheus-client = "0.18.1"
tower = { version = "0.4.6", features = ["limit"] }
hyper = { version = "0.14.13", features = ["server", "client", "http1", "stream", "tcp"] }
