[package]
name = "cardamon"
version = "0.1.0"
edition = "2021"
authors = [
  "Klaus Wagner <klaus.wagner@erstegroup.com>",
]

[dependencies]
kube = { version = "0.76.0", default-features = false, features = ["client", "rustls-tls"] } # Library for talking to Kubernetes API
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
k8s-openapi = { version = "0.16", default-features = false, features = ["v1_25"] } # Kube-rs depends on k8s-openapi
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
anyhow = "1.0.66"
futures = "*"
once_cell = "*"
tokio-cron-scheduler = "*"
prometheus-client = { git = "https://github.com/prometheus/client_rust.git", rev = "a32d413398ea0ff9377e3b11185f2c3168cf9e17" }
tower = { version = "0.4.13", features = ["limit"] }
hyper = { version = "0.14.22", features = ["server", "client", "http1", "stream", "tcp"] }
