[package]
name = "cardamon"
version = "0.2.0"
edition = "2021"
authors = [
  "Klaus Wagner <klaus.wagner@erstegroup.com>",
]

[dependencies]
kube = { version = "0.95", features = ["client"] } # Library for talking to Kubernetes API
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.0"
k8s-openapi = { version = "0.23.0", features = ["latest"] } # Kube-rs depends on k8s-openapi
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
futures = "*"
once_cell = "*"
tokio-cron-scheduler = "*"
prometheus-client = "0.21.2"
tower = { version = "0.4.13", features = ["limit"] }
hyper = { version = "0.14.31", features = ["server", "client", "http1", "stream", "tcp"] }
